log
Thu 09 Mar 2023 03:49:21 PM UTC: 
 tests:  0|7
total_score: 0/70
89e6987
Thu 16 Mar 2023 09:09:01 PM UTC: 
 tests:  0|7
total_score: 0/70
634c223
Thu 16 Mar 2023 09:12:32 PM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:18:3: error: statement with no effect [-Werror=unused-value]
   18 |   *a; = pivote
      |   ^~
exercises.c:18:7: error: expected expression before ‘=’ token
   18 |   *a; = pivote
      |       ^
cc1: all warnings being treated as errors
Compilation failed
7212e0e
Thu 16 Mar 2023 09:12:54 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:18:3: error: statement with no effect [-Werror=unused-value]
   18 |   *b; = pivote
      |   ^~
exercises.c:18:7: error: expected expression before ‘=’ token
   18 |   *b; = pivote
      |       ^
cc1: all warnings being treated as errors
Compilation failed
bec89d3
Thu 16 Mar 2023 09:13:50 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:18:3: error: statement with no effect [-Werror=unused-value]
   18 |   b; = pivote
      |   ^
exercises.c:18:6: error: expected expression before ‘=’ token
   18 |   b; = pivote
      |      ^
cc1: all warnings being treated as errors
Compilation failed
faf3831
Thu 16 Mar 2023 09:14:00 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:18:3: error: statement with no effect [-Werror=unused-value]
   18 |   b; = pivote;
      |   ^
exercises.c:18:6: error: expected expression before ‘=’ token
   18 |   b; = pivote;
      |      ^
cc1: all warnings being treated as errors
Compilation failed
043ce22
Thu 16 Mar 2023 09:14:13 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:16:16: error: initialization of ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   16 |   int pivote = a;
      |                ^
exercises.c:18:3: error: statement with no effect [-Werror=unused-value]
   18 |   b; = pivote;
      |   ^
exercises.c:18:6: error: expected expression before ‘=’ token
   18 |   b; = pivote;
      |      ^
cc1: all warnings being treated as errors
Compilation failed
ba366d2
